i thought i needed to fix them but i dont

--- a/website_1/my_website.html
+++ b/website_1/my_website.html
@@ -14,7 +14,7 @@
         </div>
         
         <div class = "second-table">
-            <table border= 1px width = 100% >
+            <table border  width = 100% >
                 <tr>
                   <td><strong>Website</strong></td>
                   <td><strong>Bring all the VC's?</strong></td>
