--- a/website_1/my_website.html
+++ b/website_1/my_website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="shortcut icon" type="image/x" href = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQadfywJjLK19xbrBuBKTIqwheuqXKFB9rrFOT-YqJM1CsbOt47mg"/>
         <link type="text/css" rel="stylesheet" href="my_website.css"/>
         <title>Jordan's Website</title>
     </head>
