--- a/website_2/jake's_restaurant.html
+++ b/website_2/jake's_restaurant.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="shortcut icon" type="image/x" a href ="http://icons.iconarchive.com/icons/martin-berube/flat-animal/128/crab-icon.png"/>
         <link type="text/css" rel="stylesheet" href="jakes_.css"/>
         <title>Restaurant Jake</title>
     </head>
@@ -12,11 +13,11 @@
         <div class = "menu">
            <h3>Menu</h3>    
             <ul>
-                <a href = ""><li>Brunch</li></a>
-                <a href = ""><li>Breakfast</li></a>
-                <a href = ""><li>Lunch</li></a>
-                <a href = ""><li>Dinner</li></a>
-                <a href = ""><li>Late Night</li></a>
+                <li><a href = "">Brunch</a></li>
+                <li><a href = "">Breakfast</a></li>
+                <li><a href = "">Lunch</a></li>
+                <li><a href = "">Dinner</a></li>
+                <li><a href = "">Late Night</a></li>
             </ul>
         </div>
         <div id = "picture"></div>
