--- a/website_1/my_website.html
+++ b/website_1/my_website.html
@@ -22,32 +22,32 @@
                   <td><strong>Rating</strong></td>
                 </tr>
                 <tr>
-                  <td><a href = "">Google</a></td>
+                  <td><a href = "https://www.google.com">Google</a></td>
                   <td>True</td>
                   <td>10</td>
                 </tr>
                 <tr>
-                  <td><a href="">Microsoft</a></td>
+                  <td><a href="https://www.microsoft.com">Microsoft</a></td>
                   <td>flase</td>
                   <td>4</td>
                 </tr>
                 <tr>
-                  <td><a href="">Apple</a></td>
+                  <td><a href="https://www.apple.com">Apple</a></td>
                   <td>true</td>
                   <td>8</td>
                 </tr>
                 <tr>
-                  <td><a href = "">Exposure Tracker</a></td>
+                  <td><a href = "https://www.exposuretrackerapp.com">Exposure Tracker</a></td>
                   <td>true</td>
                   <td>11</td>
                 </tr>
                 <tr>
-                  <td><a href = "">Uber</a></td>
+                  <td><a href = "https://www.uber.com">Uber</a></td>
                   <td>meh</td>
                   <td>7</td>
                 </tr>
                 <tr>
-                  <td><a href = "">Healthcare</a></td>
+                  <td><a href = "www.healthcare.gov">Healthcare</a></td>
                   <td>NOPE!</td>
                   <td>1</td>
                 </tr>
