--- a/website_2/dinner.html
+++ b/website_2/dinner.html
@@ -40,7 +40,7 @@
             <p>Dungeness Crab Leg Tortellini ... 33.50 </p>
             <p>Cajun Chicken and Shrimp Fettuccini ... 22.25 </p>
             <p>Pecan Crusted Catfish ... 18.95</p>
-            <p>Jake’s Traditional Bouillabaisse ... 38.99 </p>
+            <p>Jake's Traditional Bouillabaisse ... 38.99 </p>
             
         </div>
         
