--- a/website_2/jake's_restaurant.html
+++ b/website_2/jake's_restaurant.html
@@ -16,7 +16,7 @@
                 <li><a href = "">Brunch</a></li>
                 <li><a href = "">Breakfast</a></li>
                 <li><a href = "">Lunch</a></li>
-                <li><a href = "">Dinner</a></li>
+                <li><a href = "https://preview.c9users.io/ottjw/devpoint_projects/DPL/week2/day_2/website_2/dinner.html?_c9_id=livepreview4&_c9_host=https://ide.c9.io">Dinner</a></li>
                 <li><a href = "">Late Night</a></li>
             </ul>
         </div>
